src/objects/FieloPLT__Transaction__c.object
<CustomObject>
    <description>Actions that grant Points, Badges o Rewards to Members in exchange of a specific actions performed</description>
    <fields>
        <fullName>FieloPLT__Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Automatically generated related Action.</description>
        <inlineHelpText>Related Action.</inlineHelpText>
        <label>Action</label>
        <referenceTo>FieloPLT__Action__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Date__c</fullName>
        <defaultValue>now()</defaultValue>
        <description>Transaction date and time.</description>
        <inlineHelpText>Choose Transaction date and time.</inlineHelpText>
        <label>Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Event that generated the Transaction.</description>
        <inlineHelpText>Event that generated the Transaction.</inlineHelpText>
        <label>Event</label>
        <referenceTo>FieloPLT__Event__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__IsApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Transaction Approval process is approved</description>
        <inlineHelpText>When ticked, Transaction is approved.</inlineHelpText>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__IsOffline__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Transaction is processed offline.</description>
        <inlineHelpText>When ticked, Transaction is processed offline.</inlineHelpText>
        <label>Offline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__IsProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It shows if Transaction was processed.</description>
        <inlineHelpText>When ticked, the Transaction was processed.</inlineHelpText>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__IsReverted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It shows if Transaction was reverted.</description>
        <inlineHelpText>When ticked, Transaction was reverted.</inlineHelpText>
        <label>Reverted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Member that generated the Transaction.</description>
        <inlineHelpText>Enter the Member who generated the Transaction.</inlineHelpText>
        <label>Member</label>
        <referenceTo>FieloPLT__Member__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__PointCost__c</fullName>
        <description>Result of Transaction Points multiplied by Point Cost established in Program.</description>
        <inlineHelpText>Result of Transaction Points multiplied by Point Cost established in Program.</inlineHelpText>
        <label>Point Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Points__c</fullName>
        <description>Transaction Points.</description>
        <inlineHelpText>Enter the number of Transaction Points.</inlineHelpText>
        <label>Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__RevertedTransaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Transaction that was reverted.</description>
        <inlineHelpText>Transaction that was reverted.</inlineHelpText>
        <label>Reverted Transaction</label>
        <referenceTo>FieloPLT__Transaction__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Reward__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Transaction Reward.</description>
        <inlineHelpText>Transaction Reward.</inlineHelpText>
        <label>Reward</label>
        <referenceTo>FieloPLT__Reward__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__SkipEngine__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Automatically completed when a Reverted Transaction is chosen.</description>
        <inlineHelpText>When ticked, Rule Engine is skipped and Member obtains the Transaction Points.</inlineHelpText>
        <label>Skip Engine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Status__c</fullName>
        <description>Transaction status.</description>
        <inlineHelpText>Transaction status.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>OK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unapproved Transaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error in the Approval Process</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Value__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Transaction purchase value.</description>
        <inlineHelpText>Enter Transaction purchase value.</inlineHelpText>
        <label>Value</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Transaction</label>
    <listViews>
        <fullName>FieloPLT__All</fullName>
        <columns>NAME</columns>
        <columns>FieloPLT__Event__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Transactions</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>T-{0000000}</displayFormat>
        <label>Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>FieloPLT__ValidateDateTime</fullName>
        <active>true</active>
        <description>Transaction date and time must be valid.</description>
        <errorConditionFormula>ISNULL(FieloPLT__Date__c)</errorConditionFormula>
        <errorDisplayField>FieloPLT__Date__c</errorDisplayField>
        <errorMessage>Transaction date and time must be valid.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloPLT__ValidateMember</fullName>
        <active>true</active>
        <description>A Member must be selected.</description>
        <errorConditionFormula>(FieloPLT__Member__c == null)</errorConditionFormula>
        <errorDisplayField>FieloPLT__Member__c</errorDisplayField>
        <errorMessage>A Member must be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloPLT__ValidateProcessedPoints</fullName>
        <active>true</active>
        <description>A processed Transaction cannot have null points.</description>
        <errorConditionFormula>FieloPLT__IsProcessed__c &amp;&amp; ISNULL(FieloPLT__Points__c)</errorConditionFormula>
        <errorDisplayField>FieloPLT__Points__c</errorDisplayField>
        <errorMessage>A processed Transaction cannot have null points.</errorMessage>
    </validationRules>
</CustomObject>